--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0a0af">  <td>21/03/27 09:55:44</td>   <td>0</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@50a638b5]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122606666</td>   <td></td> </tr>
-<tr bgcolor="b0a0af">  <td>21/03/27 09:55:49</td>   <td>5041</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@50a638b5]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122606666</td>   <td></td> </tr>
-<tr bgcolor="9e94bf">  <td>21/03/27 09:55:53</td>   <td>9316</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@50a638b5]">&gt;&gt;initilizePages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122606666</td>   <td></td> </tr>
-<tr bgcolor="9e94bf">  <td>21/03/27 09:55:53</td>   <td>9350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@50a638b5]">verifyUserRegistration</td> 
-  <td>main@1122606666</td>   <td></td> </tr>
-<tr bgcolor="b0a0af">  <td>21/03/27 09:56:07</td>   <td>22953</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@50a638b5]">&lt;&lt;killSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122606666</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>21/03/27 14:21:12</td>   <td>0</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@4d5b6aac]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@195984832</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>21/03/27 14:21:19</td>   <td>6996</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@4d5b6aac]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@195984832</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>21/03/27 14:21:24</td>   <td>12467</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@4d5b6aac]">&gt;&gt;initilizePages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@195984832</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>21/03/27 14:21:25</td>   <td>12511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@4d5b6aac]">verifyUserRegistration</td> 
+  <td>main@195984832</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>21/03/27 14:21:42</td>   <td>30463</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@4d5b6aac]">&lt;&lt;killSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@195984832</td>   <td></td> </tr>
 </table>
