--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a863b6">  <td>21/03/27 09:57:31</td>   <td>0</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@2833cc44]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648525677</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>21/03/27 09:57:37</td>   <td>5056</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@2833cc44]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648525677</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/27 09:57:41</td>   <td>9151</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@2833cc44]">&gt;&gt;initilizePages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648525677</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/27 09:57:41</td>   <td>9188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@2833cc44]">verifyUserRegistration</td> 
-  <td>main@648525677</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/03/27 09:57:50</td>   <td>18350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserAccountTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@33f88ab]">&gt;&gt;initilizePages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648525677</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/03/27 09:57:50</td>   <td>18360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.createNewAccount()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@33f88ab]">createNewAccount</td> 
-  <td>main@648525677</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/03/27 09:58:22</td>   <td>50834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.verifyAccountServicesList()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@33f88ab]">verifyAccountServicesList</td> 
-  <td>main@648525677</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>21/03/27 09:58:30</td>   <td>58648</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@2833cc44]">&lt;&lt;killSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648525677</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>21/03/27 14:07:42</td>   <td>0</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>21/03/27 14:07:47</td>   <td>4485</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="6aad6c">  <td>21/03/27 14:07:52</td>   <td>9578</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&gt;&gt;initilizePages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="6aad6c">  <td>21/03/27 14:07:52</td>   <td>9618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">verifyUserRegistration</td> 
+  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="77cdab">  <td>21/03/27 14:08:01</td>   <td>18894</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserAccountTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@75f9eccc]">&gt;&gt;initilizePages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="77cdab">  <td>21/03/27 14:08:01</td>   <td>18905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.createNewAccount()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@75f9eccc]">createNewAccount</td> 
+  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="77cdab">  <td>21/03/27 14:08:08</td>   <td>26061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.verifyAccountServicesList()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@75f9eccc]">verifyAccountServicesList</td> 
+  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>21/03/27 14:08:16</td>   <td>33919</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&lt;&lt;killSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
 </table>
