--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,446</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">44,968</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.automation.DevOpsAssignment.RegistrationTest</td><td><a href="#m0">verifyUserRegistration</a></td><td rowspan="1">1616835085012</td><td rowspan="1">12858</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.automation.DevOpsAssignment.AccountOverviewTest</td><td><a href="#m0">verifyAccountOverview</a></td><td rowspan="1">1616911801928</td><td rowspan="1">6516</td></tr><tr class="passedeven"><td><a href="#m1">verifyTableDataAndPrintOnConsole</a></td><td rowspan="1">1616911808445</td><td rowspan="1">5360</td></tr><tr class="passedodd"><td rowspan="1">com.automation.DevOpsAssignment.RegistrationTest</td><td><a href="#m2">verifyUserRegistration</a></td><td rowspan="1">1616911774204</td><td rowspan="1">13524</td></tr><tr class="passedeven"><td rowspan="2">com.automation.DevOpsAssignment.UserAccountTest</td><td><a href="#m3">createNewAccount</a></td><td rowspan="1">1616911787798</td><td rowspan="1">8828</td></tr><tr class="passedeven"><td><a href="#m4">verifyAccountServicesList</a></td><td rowspan="1">1616911796629</td><td rowspan="1">5295</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.automation.DevOpsAssignment.RegistrationTest#verifyUserRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.automation.DevOpsAssignment.AccountOverviewTest#verifyAccountOverview</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.automation.DevOpsAssignment.AccountOverviewTest#verifyTableDataAndPrintOnConsole</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.automation.DevOpsAssignment.RegistrationTest#verifyUserRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.automation.DevOpsAssignment.UserAccountTest#createNewAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.automation.DevOpsAssignment.UserAccountTest#verifyAccountServicesList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
