--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8dba8">  <td>21/03/27 14:07:42</td>   <td>0</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>21/03/27 14:07:47</td>   <td>4485</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
-<tr bgcolor="6aad6c">  <td>21/03/27 14:07:52</td>   <td>9578</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&gt;&gt;initilizePages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
-<tr bgcolor="6aad6c">  <td>21/03/27 14:07:52</td>   <td>9618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">verifyUserRegistration</td> 
-  <td>main@339099861</td>   <td></td> </tr>
-<tr bgcolor="77cdab">  <td>21/03/27 14:08:01</td>   <td>18894</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserAccountTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@75f9eccc]">&gt;&gt;initilizePages</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
-<tr bgcolor="77cdab">  <td>21/03/27 14:08:01</td>   <td>18905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.createNewAccount()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@75f9eccc]">createNewAccount</td> 
-  <td>main@339099861</td>   <td></td> </tr>
-<tr bgcolor="77cdab">  <td>21/03/27 14:08:08</td>   <td>26061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.verifyAccountServicesList()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@75f9eccc]">verifyAccountServicesList</td> 
-  <td>main@339099861</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>21/03/27 14:08:16</td>   <td>33919</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@525f1e4e]">&lt;&lt;killSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="98b989">  <td>21/03/28 11:39:26</td>   <td>0</td> <td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="98b989">  <td>21/03/28 11:39:28</td>   <td>1997</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchApplication()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>21/03/28 11:39:34</td>   <td>7315</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&gt;&gt;initilizePages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>21/03/28 11:39:34</td>   <td>7356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">verifyUserRegistration</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="6172a4">  <td>21/03/28 11:39:47</td>   <td>20943</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserAccountTest.initilizePages()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">&gt;&gt;initilizePages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="6172a4">  <td>21/03/28 11:39:47</td>   <td>20950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.createNewAccount()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">createNewAccount</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="6172a4">  <td>21/03/28 11:39:56</td>   <td>29781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAccountTest.verifyAccountServicesList()[pri:0, instance:com.automation.DevOpsAssignment.UserAccountTest@60d8c9b7]">verifyAccountServicesList</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="a5e5c6">  <td>21/03/28 11:40:01</td>   <td>35079</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountOverviewTest.initializePages()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">&gt;&gt;initializePages</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="a5e5c6">  <td>21/03/28 11:40:01</td>   <td>35080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountOverviewTest.verifyAccountOverview()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">verifyAccountOverview</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="a5e5c6">  <td>21/03/28 11:40:08</td>   <td>41597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountOverviewTest.verifyTableDataAndPrintOnConsole()[pri:0, instance:com.automation.DevOpsAssignment.AccountOverviewTest@48aaecc3]">verifyTableDataAndPrintOnConsole</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="98b989">  <td>21/03/28 11:40:18</td>   <td>51989</td> <td title="&lt;&lt;TestBase.killSession()[pri:0, instance:com.automation.DevOpsAssignment.RegistrationTest@3967e60c]">&lt;&lt;killSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664439369</td>   <td></td> </tr>
 </table>
